Add --add-opens=java.base/java.net=ALL-UNNAMED to VM options