@@ -739,7 +739,8 @@
           <configuration>
             <useSystemClassLoader>true</useSystemClassLoader>
             <useManifestOnlyJar>false</useManifestOnlyJar>
-            <argLine>@{argLine} -Xmx4g -ea -Duser.timezone=UTC --add-exports java.base/sun.nio.ch=ALL-UNNAMED</argLine>
+            <!-- The add-exports and add-opens flags are required for Java 17 -->
+            <argLine>@{argLine} -Xmx4g -ea -Duser.timezone=UTC --add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED</argLine>
             <forkCount>1C</forkCount>
             <failIfNoTests>false</failIfNoTests>
           </configuration>
@@ -749,7 +750,8 @@
           <artifactId>maven-failsafe-plugin</artifactId>
           <version>${pathling.surefireVersion}</version>
           <configuration>
-            <argLine>-Xmx4g -ea -Duser.timezone=UTC --add-exports java.base/sun.nio.ch=ALL-UNNAMED</argLine>
+            <!-- The add-exports and add-opens flags are required for Java 17 -->
+            <argLine>-Xmx4g -ea -Duser.timezone=UTC --add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED</argLine>
           </configuration>
         </plugin>
         <plugin>
